<resources>
    <string name="app_name">Covid19 Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="active">Active</string>
    <string name="confirmed">Confirmed</string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>
    <string name="state">State</string>
    <string name="cnfrmd">Cnfrmd</string>
    <string name="actv">Actv</string>
    <string name="rcvrd">Rcvrd</string>
    <string name="dcsd">Dcsd</string>
    <string name="country">Country</string>
</resources>
