<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/staticLl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/stateNameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.19"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:lines="1"
        android:padding="@dimen/dimen_5"
        android:text="@string/state"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/dimen_text_size_12">

    </TextView>


    <TextView
        android:id="@+id/confirmedCaseTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:lines="1"
        android:padding="@dimen/dimen_5"
        android:text="@string/cnfrmd"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/dimen_text_size_12">

    </TextView>


    <TextView
        android:id="@+id/activeCaseTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:lines="1"
        android:padding="@dimen/dimen_5"
        android:text="@string/actv"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/dimen_text_size_12">

    </TextView>

    <TextView
        android:id="@+id/recoveredCaseTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:lines="1"
        android:padding="@dimen/dimen_5"
        android:text="@string/rcvrd"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/dimen_text_size_12">

    </TextView>

    <TextView
        android:id="@+id/deceasedCaseTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21"
        android:ellipsize="end"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:lines="1"
        android:padding="@dimen/dimen_5"
        android:text="@string/dcsd"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/dimen_text_size_12">

    </TextView>


</LinearLayout>
