<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/worldDateTimeStampTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10"
        android:layout_marginTop="@dimen/dimen_10"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:padding="@dimen/dimen_5"
        android:textColor="@color/colorGrey">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/worldDateTimeStampTv"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_weight="0.5"
                app:cardCornerRadius="@dimen/dimen_10"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="@dimen/dimen_1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/confirmedWorldTodayTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_10"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:fontFamily="@font/nunito_regular"
                        android:textColor="@color/colorRed"
                        android:textSize="@dimen/dimen_text_size_15">

                    </TextView>

                    <TextView
                        android:id="@+id/totWorldConfirmedCaseTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/confirmedWorldTodayTv"
                        android:layout_marginStart="@dimen/dimen_10"
                        android:fontFamily="@font/nunito_regular"
                        android:textColor="@color/colorRed"
                        android:textSize="@dimen/dimen_text_size_24">

                    </TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/totWorldConfirmedCaseTv"
                        android:fontFamily="@font/nunito_regular"
                        android:padding="@dimen/dimen_10"
                        android:text="@string/confirmed"
                        android:textColor="@color/colorRed"
                        android:textSize="@dimen/dimen_text_size_15">

                    </TextView>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_10"
                android:layout_weight="0.5"
                app:cardCornerRadius="@dimen/dimen_10"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="@dimen/dimen_1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/activeWorldTodayTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_10"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:fontFamily="@font/nunito_regular"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/dimen_text_size_15"
                        android:visibility="invisible">

                    </TextView>

                    <TextView
                        android:id="@+id/totalWorldActiveCaseTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/activeWorldTodayTv"
                        android:layout_marginStart="@dimen/dimen_10"
                        android:fontFamily="@font/nunito_regular"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/dimen_text_size_24">

                    </TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/totalWorldActiveCaseTv"
                        android:fontFamily="@font/nunito_regular"
                        android:padding="@dimen/dimen_10"
                        android:text="@string/active"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/dimen_text_size_15">

                    </TextView>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_weight="0.5"
                app:cardCornerRadius="@dimen/dimen_10"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="@dimen/dimen_0_5">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/totWorldRecoveredCaseTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/todayWorldRecoveredCaseTv"
                        android:layout_marginStart="@dimen/dimen_10"
                        android:fontFamily="@font/nunito_regular"
                        android:textColor="@color/colorGreen"
                        android:textSize="@dimen/dimen_text_size_24">

                    </TextView>

                    <TextView
                        android:id="@+id/todayWorldRecoveredCaseTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_10"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:fontFamily="@font/nunito_regular"
                        android:textColor="@color/colorGreen"
                        android:textSize="@dimen/dimen_text_size_15">

                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/totWorldRecoveredCaseTv"
                        android:fontFamily="@font/nunito_regular"
                        android:padding="@dimen/dimen_10"
                        android:text="@string/recovered"
                        android:textColor="@color/colorGreen"
                        android:textSize="@dimen/dimen_text_size_15">

                    </TextView>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_10"
                android:layout_weight="0.5"
                app:cardCornerRadius="@dimen/dimen_10"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="@dimen/dimen_1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/todayWorldDeceasedTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_10"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:fontFamily="@font/nunito_regular"
                        android:textColor="@color/colorGrey"
                        android:textSize="@dimen/dimen_text_size_15">

                    </TextView>

                    <TextView
                        android:id="@+id/totWorldDeceasedCaseTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/todayWorldDeceasedTv"
                        android:layout_marginStart="@dimen/dimen_10"
                        android:fontFamily="@font/nunito_regular"
                        android:textColor="@color/colorGrey"
                        android:textSize="@dimen/dimen_text_size_24">

                    </TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/totWorldDeceasedCaseTv"
                        android:fontFamily="@font/nunito_regular"
                        android:padding="@dimen/dimen_10"
                        android:text="@string/deceased"
                        android:textColor="@color/colorGrey"
                        android:textSize="@dimen/dimen_text_size_15">

                    </TextView>


                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dimen_5"
            android:layout_marginEnd="@dimen/dimen_5"
            android:layout_weight="0.5"
            app:cardCornerRadius="@dimen/dimen_10"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:strokeColor="@color/colorPrimaryDark"
            app:strokeWidth="@dimen/dimen_0_5">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/staticLl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.19"
                        android:fontFamily="@font/nunito_regular"
                        android:gravity="center"
                        android:padding="@dimen/dimen_5"
                        android:text="@string/country"
                        android:textColor="@color/colorGrey"
                        android:textSize="@dimen/dimen_text_size_12">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/nunito_regular"
                        android:gravity="center"
                        android:padding="@dimen/dimen_5"
                        android:text="@string/cnfrmd"
                        android:textColor="@color/colorRed"
                        android:textSize="@dimen/dimen_text_size_12">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/nunito_regular"
                        android:gravity="center"
                        android:padding="@dimen/dimen_5"
                        android:text="@string/actv"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/dimen_text_size_12">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:fontFamily="@font/nunito_regular"
                        android:gravity="center"
                        android:padding="@dimen/dimen_5"
                        android:text="@string/rcvrd"
                        android:textColor="@color/colorGreen"
                        android:textSize="@dimen/dimen_text_size_12">

                    </TextView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.21"
                        android:fontFamily="@font/nunito_regular"
                        android:gravity="center"
                        android:padding="@dimen/dimen_5"
                        android:text="@string/dcsd"
                        android:textColor="@color/colorGrey"
                        android:textSize="@dimen/dimen_text_size_12">

                    </TextView>


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/countryListRv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/staticLl">

                </androidx.recyclerview.widget.RecyclerView>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/worldPb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:visibility="gone">

    </ProgressBar>
</RelativeLayout>